--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,12 +3,12 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Awards"
+    url: /awards/  
+    
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
   - title: "Portfolio"
     url: /portfolio/
         
