--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Tingwei Zhu (朱庭纬)"
   avatar           : "avator.jpg"
   bio              : "Ph.D. candidate at NJU."
-  location         : "Hangzhou, China"
+  location         : "Nanjing, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=_lFHL9sAAAAJ&hl=zh-CN"
